--- a/src/hospitalPage/styles/Doctors.css
+++ b/src/hospitalPage/styles/Doctors.css
@@ -174,3 +174,21 @@ li span {
    
   }
 }
+
+@media screen and (max-width: 500px) {
+  /* .doctors {
+    padding: 40px 50px;
+  } */
+  
+  .card8{
+    flex: 0 0 auto;
+    background-color: white;
+    text-align: left;
+    position: relative;
+    width: 95%;
+    height: auto;
+    margin-left: 1rem;
+    padding-bottom: 30px;
+   
+  }
+}
