--- a/src/hospitalPage/styles/review.css
+++ b/src/hospitalPage/styles/review.css
@@ -133,7 +133,7 @@
 }
 .text{
     display: inline-block;
-    margin-left: 15px;
+    margin-left: 2%;
 }
 .testi-rating-list{
     display: inline-block;
