--- a/src/hospitalPage/styles/hospital.css
+++ b/src/hospitalPage/styles/hospital.css
@@ -18,7 +18,7 @@
 }
 
 .logo img{
-	width: 30%;
+	width: 80px;
 }
 
 .Nav-menu{
@@ -101,67 +101,89 @@
 	font-feature-settings: 'salt' on, 'liga' off;
 	color: #FFFFFF;
 }
-.ham{
+
+.nav-button{
 	display: none;
 
 	/* height: 30px;
 	width: 28px; */
 	background-color: transparent;
 }
+
 @media screen and (max-width: 1150px) {
 	
-	.ham{
-	border: none;
+	.nav-button {
+		border: none;
+		justify-content:flex-end; 
+		display:flex;
+		flex: 4%;
+		background-color: transparent;
+		color: #000;
+		font-size: 18px;
+		margin-right: 40px;
+	}
+
+	.ham-close{
+		border: none;
 		justify-content:flex-end; 
 		display:flex;
 		flex: 4%;
 		background-color: transparent;
 		/* height: 30px;
 		width: 28px; */
-   
+		color: #263544;   
+		font-size: 20px;
+		z-index: 20;
 	}
+
+	
+
 	.Nav-cont{
 		display: none;
 	}
 	.Testing-2{
-		margin-top: 35px;
+		left: 0;
+		top: 0;
+		margin: 0px;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		background-color: #fff;
 		align-items: center;
 		justify-content: center;
+		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
-	.Testing-2 a{
-		
-	
+
+	.Testing-2 a{	
 		float: none;
 		display: block;
 		text-align: center;
 		width: 100%;
 		margin: 0px;
 		padding: 2px;
-		color: #000;
-	
-	
-	text-decoration: none;
-	font-family: Inter;
-	font-style: normal;
-	font-weight: bold;
-	font-size: 10px;
-	/* identical to box height, or 26px */
-	font-feature-settings: 'salt' on, 'liga' off;
-	
+		color: #f2f2f2;	
+		text-decoration: none;
+		font-family: Inter;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 20px;
+		/* identical to box height, or 26px */
+		color: #263544;
 	}
 	 
-	.Testing a:hover {
+	.Testing-2 a:hover {
 		color: #008489;
-		;
 	}
 	
 	/* Add a color to the active/current link */
 	
-	.Testing a.active {
+	.Testing-2 a.active {
 		color: white;
 	}
-	.Testing .search-btn {
-	
+	.Testing-2 .search-btn {	
 		padding: 2px;
 		
 		background: transparent;
@@ -169,11 +191,11 @@
 		border: none;
 		cursor: pointer;
 	}	
-	.Testing .login-btn {
+	.Testing-2 .login-btn {
 	
-		padding: 2px;
-		
-		font-size: 10px;
+		padding: 5px 10px;
+		margin-top: 20px;
+		font-size: 20px;
 		border: none;
 		cursor: pointer;
 		background: #16292A;
@@ -184,7 +206,6 @@
 		
 		/* identical to box height, or 26px */
 		text-align: center;
-		font-feature-settings: 'salt' on, 'liga' off;
 		color: #FFFFFF;
 	}
    
