--- a/src/hospitalPage/styles/facilities.css
+++ b/src/hospitalPage/styles/facilities.css
@@ -24,6 +24,7 @@
 .cards {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .icon5 {
@@ -82,4 +83,9 @@
     margin-right: 20px;
     width: 283px;
   }
+}
+
+.card1{
+  margin-right: 40px;
+  text-align: justify;
 }
