--- a/src/hospitalPage/styles/facilities.css
+++ b/src/hospitalPage/styles/facilities.css
@@ -85,7 +85,17 @@
   }
 }
 
-.card1{
+.card1 {
   margin-right: 40px;
   text-align: justify;
+}
+
+@media only screen and (max-width: 645px) {
+  .card1 {
+    background-color: #efefef;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
