--- a/src/hospitalPage/styles/footer.css
+++ b/src/hospitalPage/styles/footer.css
@@ -30,7 +30,7 @@
 	display: flex;
 	width: 100%;
 } */
-.footer-contact-info {
+.bottom-footer-contact-info {
   border-radius: 16px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 16px 32px 0px rgba(156, 156, 156, 0.2);
@@ -38,7 +38,7 @@
   padding-bottom: 55px;
   margin-top: -226px;
 }
-.footer-contact-info-3 {
+.bottom-footer-contact-info-3 {
   margin-top: 0;
   padding: 0;
   background: 0;
@@ -47,7 +47,7 @@
 .footer-menu.footer-menu-2 {
   overflow: hidden;
 }
-.footer-contact-info-3 .footer-contact-content p {
+.bottom-footer-contact-info-3 .footer-contact-content p {
   color: #91a1b4;
   padding-right: 20px;
 }
@@ -57,11 +57,8 @@
   color: #647589;
   margin-bottom: 12px;
 }
-.footer-contact-info-3 .footer-emailing ul li {
+.bottom-footer-contact-info-3 .footer-emailing ul li {
   color: #91a1b4;
-}
-.footer-emailing ul li:last-child {
-  margin: 0;
 }
 .footer-co-content {
   overflow: hidden;
@@ -194,4 +191,7 @@
   left: 300% !important;
   margin-bottom: 20px !important;
   margin-top: 20px !important;
+}
+.footer {
+  margin-top: 5rem;
 }
