--- a/src/hospitalPage/styles/Procedures.css
+++ b/src/hospitalPage/styles/Procedures.css
@@ -45,7 +45,7 @@
 .cardsRow {
   display: flex;
   flex-direction: row;
-  overflow: auto
+  overflow: auto;
 }
 
 .cardRow {
@@ -53,7 +53,7 @@
   flex-direction: row;
 }
 .cardsRow::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 
 .box1 {
@@ -82,11 +82,20 @@
   margin-left: 10px;
   margin-right: 10px;
   padding-top: 30px;
-  color: #CCCCCC;
+  color: #cccccc;
 }
 
 @media only screen and (max-width: 1155px) {
   .procedures1 {
     padding: 40px 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .procedures1 {
+    padding: 40px 20px;
+  }
+  .content1 {
+    padding-left: 10px;
   }
 }
