--- a/src/searchresultPage/styles/searchbanner.css
+++ b/src/searchresultPage/styles/searchbanner.css
@@ -73,3 +73,17 @@
     color: #FFFFFF;
     margin-top: 30px;
 }
+@media (min-width:250px) and (max-width:720px){
+    .search-result .search-body {
+        width: 100%;
+        height: auto;
+        margin: auto;
+        background: #FFFFFF;
+        border-radius: 16px;
+        padding: 15px 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
