--- a/src/emergencyPage/styles/emergencyappointment.css
+++ b/src/emergencyPage/styles/emergencyappointment.css
@@ -106,7 +106,7 @@
 }
 
 
-.appoint-button{
+.appoint-button-2{
 	background:  #7F3D3D;
 box-shadow: 0px 4px 12px rgba(197, 74, 80, 0.5);
 border-radius: 48px;
@@ -366,7 +366,7 @@ color: #263544;
 		display: none;
 	}
 
-	.appoint-button{
+	.appoint-button-2{
 		margin-top: -20px;
 	}
 
@@ -461,7 +461,7 @@ color: #263544;
 		display: none;
 	}
 
-	.appoint-button{
+	.appoint-button-2{
 		margin-top: -20px;
 	}
 
