--- a/src/hospitalPage/styles/HeroSection.css
+++ b/src/hospitalPage/styles/HeroSection.css
@@ -1,5 +1,6 @@
 .heroSection {
-  padding: 40px 105px;
+  width:98%;
+  margin:auto;
   display: flex;
   flex-direction: row;
 }
@@ -61,7 +62,7 @@
 
 .right {
   flex: 1.8;
-  margin-left: 25px;
+  margin-left: 13px;
   margin-top: 10px;
 }
 
@@ -106,12 +107,20 @@
 
 .middle {
   margin-top: 20px;
+  display: flex;
+}
+@media (min-width: 300px) and (max-width: 859px){
+  .middle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-.description {
+.middle .middle-left .description {
   width: 289px;
   height: 96px;
-
+margin: auto;
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
