--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -2,7 +2,7 @@
 .counter-1{
 	/* padding-top: 50px; */
 	background:  #16292A;
-	height: 400px;
+	height: 300px;
 
 }
 .content-1 {
@@ -69,7 +69,7 @@
 
 .outer-box{
 	/*position: relative;*/
-	height: 820px;
+	height: auto;
 	width:100%;
 	background: repeating-linear-gradient(#16292A, #16292A 49.9%, #F8F8F8 50.1%, #F8F8F8 100%);
 }
@@ -150,6 +150,7 @@
 	font-weight: 800;
 	font-size: 24px;
 	letter-spacing: -0.01em;
+	outline: 0;
 }
 
 .outer-box .container .service-box .left .body .form-line form .dropdown button{
