--- a/src/landingPage/styles/emergency_call.css
+++ b/src/landingPage/styles/emergency_call.css
@@ -11,3 +11,21 @@
 	border-bottom-left-radius: 5px;
 	z-index: 30;
 }
+.emergency_call:hover .overlay { 
+	opacity: 1; 
+width: 300px; 
+} 
+.overlay{ 
+	position: absolute; 
+	transition: 0.7s ease; 
+	opacity: 0; 
+width: 0; 
+	height: 100%; 
+bottom: 0; 
+right: 5px; 
+	font-family: Inter;
+	color: whitesmoke;
+	padding-top: 15%;
+	text-align: center;
+	background-color: purple; 
+} 
