--- a/src/landingPage/styles/services2.css
+++ b/src/landingPage/styles/services2.css
@@ -18,26 +18,29 @@
 box-sizing: border-box;
 }
 .service-2{
-    margin-top:10%;
+    margin-top:7%;
 }
 
 .service-2 .title{
-    width: 100%;
+    width: 90%;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 70px;
+   
 }
 
 .service-2 .title .left{
     display: flex;
     width: 50%;
+    
 }
 
 .service-2 .title .right{
     display: flex;
     width: 50%;
+    margin-left: 9%;
+    
 }
 
 .service-2 .title .left h1{
@@ -57,7 +60,7 @@ box-sizing: border-box;
 
 @media (min-width: 250px) and (max-width: 500px){
     .service-2 .row{
-        margin-top:60%;
+        margin-top:70%;
     }
     .service-content h3{
         font-family: Inter;
@@ -96,6 +99,7 @@ box-sizing: border-box;
     .service-2 .title .right{
         width: 100%;
         height: auto;
+        margin-left: 1%;
     }
     
     .service-2 .title .left h1{
