--- a/src/searchresultPage/styles/searchbanner.css
+++ b/src/searchresultPage/styles/searchbanner.css
@@ -67,7 +67,7 @@
     resize: none;
 }
 
-.search-result .search-body .search-button {
+.search-result .bar .search-button {
     display: flex;
     justify-content: space-between;
     padding: 12px 16px;
@@ -98,6 +98,27 @@
     color: #FFFFFF;
     margin-top: 30px;
 }
+.bar{
+    margin:0 auto;
+    width:575px;
+    border-radius:30px;
+    border:1px solid #dcdcdc;
+  }
+  .bar:hover{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+  }
+  .bar:focus-within{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+    outline:none;
+  }
+  .searchbar{
+    height:45px;
+    border:none;
+    width:500px;
+    font-size:16px;
+    outline: none;
+    
+  }
 @media (min-width:250px) and (max-width:720px){
     .search-result .search-body {
         width: 100%;
