--- a/src/Admin/styles.css
+++ b/src/Admin/styles.css
@@ -1,14 +1,208 @@
-@media (max-width:800px) and (min-width :300px){
-    .Admin-dash{
-        overflow-x:auto;
-    }
-    
-            
-             }
-             @media (max-width:1400px) and (min-width :900px){
-                .Admin-dash{
-                    overflow-x:auto;
-                }
-                
-                        
-                         }
+*{
+    font-family: 'Inter', sans-serif;
+}
+.Admin-Navbar{
+	padding: 20px 0px;
+	display:flex;
+	flex: 100%;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.Admin-Navbar .Admin-logo{
+	display: flex;
+    width: 10%;	
+	margin-left: 50px;
+}
+
+.Admin-Navbar .Admin-logo img{
+	width: 80px;
+}
+
+
+
+.Admin-Navbar .Admin-Nav-menu{
+	display: flex;
+	width:90%;
+	align-items: center;
+}
+.Admin-Navbar .Admin-Nav-menu .Admin-Nav-cont{
+    display: flex;
+    width: 97%;
+}
+.Admin-Navbar .Admin-Nav-menu .Admin-Nav-cont .Admin-topnav-2 {
+	display: flex;
+	flex: 70%; 
+    margin: auto;
+	position: relative;
+	/* overflow: hidden; */
+	/* justify-content: flex-start; */
+	align-items: center;	
+}
+
+.Admin-Navbar .Admin-Nav-menu .Admin-Nav-cont .Admin-topnav-2 a {
+	align-items: center;
+	/* float: left; */
+	color: #000;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-family: Inter;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 15px;
+	/* identical to box height, or 26px */
+	font-feature-settings: 'salt' on, 'liga' off;
+	
+}
+
+/* Change the color of links on hover */
+
+.Admin-topnav-2 a:hover {
+	color: #890007;
+	;
+}
+
+/* Add a color to the active/current link */
+
+
+.Admin-Nav-cont .Admin-login-section {
+	 flex: 28%; 
+	justify-content: flex-end;
+}
+ .Admin-Nav-cont .Admin-login-section .Admin-search-btn {
+	
+	padding: 6px 10px;
+	
+	background: transparent;
+	font-size: 17px;
+	border: none;
+	cursor: pointer;
+}
+.Admin-Nav-cont .Admin-login-section .Admin-login-btn {
+	
+	padding: 6px 10px;
+	
+	font-size: 17px;
+	border: none;
+	cursor: pointer;
+	background: #16292A;
+	border-radius: 8px;
+	font-family: Inter;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	/* identical to box height, or 26px */
+	text-align: center;
+	font-feature-settings: 'salt' on, 'liga' off;
+	color: #FFFFFF;
+}
+
+.Admin-nav-button{
+	display: none;
+
+	/* height: 30px;
+	width: 28px; */
+	background-color: transparent;
+}
+
+@media screen and (max-width: 1150px) {
+	
+	.Admin-nav-button {
+		border: none;
+		justify-content:flex-end; 
+		display:flex;
+		flex: 4%;
+		background-color: transparent;
+		color: #000;
+		font-size: 18px;
+		margin-right: 40px;
+	}
+
+	.Admin-ham-close{
+		border: none;
+		justify-content:flex-end; 
+		display:flex;
+		flex: 4%;
+		background-color: transparent;
+		/* height: 30px;
+		width: 28px; */
+		color: #263544;   
+		font-size: 20px;
+		z-index: 20;
+	}
+
+	
+
+	.Admin-Navbar .Admin-Nav-menu .Admin-Nav-menu{
+		display: none;
+	}
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2{
+		left: 0;
+		top: 0;
+		margin: 0px;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		background-color: #fff;
+		align-items: center;
+		justify-content: center;
+		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2 a{	
+		float: none;
+		display: block;
+		text-align: center;
+		width: 100%;
+		margin: 0px;
+		padding: 2px;
+		color: #f2f2f2;	
+		text-decoration: none;
+		font-family: Inter;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 20px;
+		/* identical to box height, or 26px */
+		color: #263544;
+	}
+	 
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2 a:hover {
+		color: #008489;
+	}
+	
+	/* Add a color to the active/current link */
+	
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2 a.active {
+		color: white;
+	}
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2 .Admin-search-btn {	
+		padding: 2px;
+		
+		background: transparent;
+		font-size: 10px;
+		border: none;
+		cursor: pointer;
+	}	
+	.Admin-Navbar .Admin-Nav-menu .Admin-Testing-2 .Admin-login-btn {
+	
+		padding: 5px 10px;
+		margin-top: 20px;
+		font-size: 20px;
+		border: none;
+		cursor: pointer;
+		background: #16292A;
+		border-radius: 8px;
+		font-family: Inter;
+		font-style: normal;
+		font-weight: bold;
+		
+		/* identical to box height, or 26px */
+		text-align: center;
+		color: #FFFFFF;
+	}
+   
+}
